--- a/client/front_exchange/src/styles.css
+++ b/client/front_exchange/src/styles.css
@@ -30,3 +30,7 @@ body{
   font-family: 'Roboto Bold';
   src: url(assets/fonts/Roboto/Roboto-Bold.ttf);
 }
+
+:root {
+  color-scheme: only light;
+}
